force-app/main/default/objects/FechaDC_Sysde__c/FechaDC_Sysde__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Fecha de cierre Sysde</label>
</CustomObject>