force-app/main/default/objects/FechaDC_Sysde__c/fields/Fecha_cierre__c.field-meta.xml
<CustomField>
    <fullName>Fecha_cierre__c</fullName>
    <label>Fecha de cierre</label>
    <type>Date</type>
</CustomField>