force-app/main/default/objects/FechaDC_Sysde__c/fields/Total_Correos_Enviados__c.field-meta.xml
<CustomField>
    <fullName>Total_Correos_Enviados__c</fullName>
    <label>Total Correos Enviados</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>