force-app/main/default/objects/FechaDC_Sysde__c/fields/Trimestre_Terminado__c.field-meta.xml
<CustomField>
    <fullName>Trimestre_Terminado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trimestre Terminado</label>
    <type>Checkbox</type>
</CustomField>